--- a/NyaaRSSreader/Properties/Settings.settings
+++ b/NyaaRSSreader/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="Path" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="ComboIndex" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
