--- a/NyaaRSSreader/Properties/Settings.settings
+++ b/NyaaRSSreader/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="ComboIndex" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="cbSortIndex" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
