--- a/NyaaRSSreader/Properties/Settings.settings
+++ b/NyaaRSSreader/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="cbSortIndex" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="cbNotFindImage" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
