--- a/NyaaRSSreader/Properties/Settings.settings
+++ b/NyaaRSSreader/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="cbNotFindImage" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="Setting" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
